# MO_dynamics

./: .gitignore  __init__.py  get_MO_dynamics.py  pyproject.toml
analysis/: ao_hamiltonian.py  qcffpi_utils.py  qchemMAC.py  test.py  trajectory.py
analysis/mpi/: ygammas_mpi.py
modyn/: inputoutput_nico.py  more_MO_data.py  trajectory.py
modyn/mpi/: get_MO_dynamics_mpi.py
modyn/plotting/: extract_params.py  view_MO_dynamics.py
modyn/tests/: __init__.py  rMO_timing.py
mpi/: more_MO_data_mpi.py
plotting/: energy_dynamics.py  more_MO_dyn.py
tests/: rMO_timing.py
